--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,6 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <div id="container" class="grid grid-cols-4 gap-4 w-full place-items-center">
-      <script type="module" src="list.js"></script>
+      <script type="module" src="js/main.js"></script>
   </body>
 </html>
