--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <link href="./output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Me when IDEA &#128528;</title>
   </head>
   <body>
     <div id="app"></div>
