--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,18 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <h1 class="text-6xl text-orange-400">Hello</h1>
     <div id="container" class="grid grid-cols-4 gap-4 w-full place-items-center">
+      <div class="flex justify-center items-center space-x-4">
+        <input 
+        type="text"
+         id="input"
+          placeholder="Enter a letter or word" 
+          class="p-2 border-2 border-gray-300 rounded-md w-48 focus:outline-none focus:ring-2 focus:ring-blue-500">
+        <button
+          id="submitButton"
+          class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 focus:ring-2 focus:ring-blue-300"> Submit  </button>
+      </div>
       <script type="module" src="js/main.js"></script>
   </body>
 </html>
