--- a/app/index.html
+++ b/app/index.html
@@ -11,17 +11,31 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <h1 class="text-6xl text-orange-400">Hello</h1>
-    <div id="container" class="grid grid-cols-4 gap-4 w-full place-items-center">
-      <div class="flex justify-center items-center space-x-4">
-        <input 
+    <form action="" id="card-form" class="my-4">
+      <label for="input" class="block mb-2">Input:</label>
+      <input
         type="text"
-         id="input"
-          placeholder="Enter a letter or word" 
-          class="p-2 border-2 border-gray-300 rounded-md w-48 focus:outline-none focus:ring-2 focus:ring-blue-500">
-        <button
-          id="submitButton"
-          class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 focus:ring-2 focus:ring-blue-300"> Submit  </button>
-      </div>
-      <script type="module" src="js/main.js"></script>
+        id="input"
+        placeholder="Enter a letter or word"
+        class="p-2 border-2 border-gray-300 rounded-md w-48 focus:outline-none focus:ring-2 focus:ring-blue-500"
+      /><br />
+      <input
+        type="submit"
+        value="Submit form"
+        class="mt-2 p-2 bg-blue-500 text-white rounded-md cursor-pointer hover:bg-blue-600"
+      />
+    </form>
+
+    <div
+      id="container"
+      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 w-full place-items-center"
+    >
+      <h2 class="col-span-4 text-2xl font-semibold text-center my-4">
+        Word/letter list
+      </h2>
+      <div id="word-list" class="col-span-4 w-full"></div>
+    </div>
+
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
