--- a/app/index.html
+++ b/app/index.html
@@ -10,18 +10,19 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <h1 class="text-6xl text-orange-400">Hello</h1>
+    <h1 class="text-6xl text-orange-400">Hello This Is The Game</h1>
     <form action="" id="card-form" class="my-4">
       <label for="input" class="block mb-2">Input:</label>
       <input
         type="text"
         id="input"
-        placeholder="Enter a letter or word"
+        placeholder="Enter a letter or guess"
+        required
         class="p-2 border-2 border-gray-300 rounded-md w-48 focus:outline-none focus:ring-2 focus:ring-blue-500"
       /><br />
       <input
         type="submit"
-        value="Submit form"
+        value="Submit"
         class="mt-2 p-2 bg-blue-500 text-white rounded-md cursor-pointer hover:bg-blue-600"
       />
     </form>
