--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,14 @@
         Word/letter list
       </h2>
       <div id="word-list" class="col-span-4 w-full"></div>
+      <button
+        id="playButton"
+        class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out"
+      >
+        Play
+      </button>
     </div>
+    <div class="container"></div>
 
     <script type="module" src="js/main.js"></script>
   </body>
