--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,9 @@
         Play
       </button>
     </div>
-    <div class="container"></div>
+    <div
+      class="container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 p-6"
+    ></div>
 
     <script type="module" src="js/main.js"></script>
   </body>
