--- a/app/index.html
+++ b/app/index.html
@@ -29,21 +29,30 @@
 
     <div
       id="container"
-      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 w-full place-items-center"
+      class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 w-full place-items-center"
     >
       <h2 class="col-span-4 text-2xl font-semibold text-center my-4">
         Word/letter list
       </h2>
       <div id="word-list" class="col-span-4 w-full"></div>
-      <button
-        id="playButton"
-        class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out"
-      >
-        Play
-      </button>
+      <div class="absolute left-0 p-4 flex gap-4">
+        <button
+          id="playButton"
+          class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out"
+        >
+          Play
+        </button>
+        <button
+          id="hintButton"
+          class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out"
+        >
+          Hint
+        </button>
+      </div>
     </div>
+
     <div
-      class="container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 p-6"
+      class="container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 p-6"
     ></div>
 
     <script type="module" src="js/main.js"></script>
