--- a/app/index.html
+++ b/app/index.html
@@ -8,54 +8,51 @@
     <title>Me when IDEA &#128528;</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-    <h1 class="text-6xl text-orange-400">Hello This Is The Game</h1>
-    <form action="" id="card-form" class="my-4">
-      <label for="input" class="block mb-2">Input:</label>
+    <h1 class="text-6xl text-orange-400 text-center mt-8">
+      Hello This Is The Game
+    </h1>
+
+    <form id="card-form" class="my-4 mx-auto max-w-md">
+      <label for="input" class="block mb-2">Input your Guess:</label>
       <input
         type="text"
         id="input"
-        placeholder="Enter a letter or guess"
+        placeholder="Enter a state name"
         required
-        class="p-2 border-2 border-gray-300 rounded-md w-48 focus:outline-none focus:ring-2 focus:ring-blue-500"
-      /><br />
+        class="p-2 border-2 border-gray-300 rounded-md w-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+        disabled
+      />
       <input
         type="submit"
-        value="Submit"
+        value="Submit Guess"
         class="mt-2 p-2 bg-blue-500 text-white rounded-md cursor-pointer hover:bg-blue-600"
+        disabled
       />
     </form>
 
-    <div
-      id="container"
-      class="relative grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 w-full place-items-center"
-    >
-      <h2 class="col-span-4 text-2xl font-semibold text-center my-4">
-        Word/letter list
-      </h2>
-      <div id="word-list" class="col-span-4 w-full"></div>
+    <div id="word-list" class="text-center my-4">
+      <h2 class="text-xl font-semibold">Your Guess Results will appear here</h2>
+    </div>
 
-      <div class="absolute left-0 p-4 flex gap-4">
-        <button
-          id="playButton"
-          class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out"
-        >
-          Play
-        </button>
-        <button
-          id="hintButton"
-          class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out"
-        >
-          Hint
-        </button>
-      </div>
+    <div class="flex justify-center gap-4 my-4">
+      <button
+        id="playButton"
+        class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out"
+      >
+        Play
+      </button>
+      <button
+        id="hintButton"
+        class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out"
+      >
+        Hint
+      </button>
     </div>
 
     <div
       class="container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 p-6"
     ></div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="/JS/main.js"></script>
   </body>
 </html>
