--- a/app/index.html
+++ b/app/index.html
@@ -20,13 +20,11 @@
         placeholder="Enter a state name"
         required
         class="p-2 border-2 border-gray-300 rounded-md w-full focus:outline-none focus:ring-2 focus:ring-blue-500"
-        disabled
       />
       <input
         type="submit"
         value="Submit Guess"
         class="mt-2 p-2 bg-blue-500 text-white rounded-md cursor-pointer hover:bg-blue-600"
-        disabled
       />
     </form>
 
@@ -44,6 +42,7 @@
       <button
         id="hintButton"
         class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out"
+        disabled
       >
         Hint
       </button>
@@ -53,6 +52,6 @@
       class="container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 p-6"
     ></div>
 
-    <script type="module" src="/JS/main.js"></script>
+    <script type="module" src="JS/main.js"></script>
   </body>
 </html>
