--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,13 @@
     <title>Me when IDEA &#128528;</title>
   </head>
   <body>
+    <div
+      id="score-container"
+      class="absolute top-4 right-4 text-xl font-semibold text-gray-800"
+    >
+      Score: <span id="score">0</span>
+    </div>
+
     <h1 class="text-6xl text-orange-400 text-center mt-8">
       Hello This Is The Game
     </h1>
@@ -50,7 +57,9 @@
 
     <div
       class="container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 p-6"
-    ></div>
+    >
+      <!-- State cards will appear here -->
+    </div>
 
     <script type="module" src="JS/main.js"></script>
   </body>
