--- a/app/index.html
+++ b/app/index.html
@@ -57,9 +57,7 @@
 
     <div
       class="container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 p-6"
-    >
-      <!-- State cards will appear here -->
-    </div>
+    ></div>
 
     <script type="module" src="JS/main.js"></script>
   </body>
